syntax = "proto3";
import "google/protobuf/empty.proto";
package g2gw;
option cc_generic_services = true;

message PlayerMsgNotifyRequest
{
  uint32 scene_config_id = 1;
  uint64 scene_gameguid = 2;
}

service G2gwService {
  rpc PlayerService (PlayerMsgNotifyRequest) returns (google.protobuf.Empty);
}

service G2cService {
  rpc PlayerService (PlayerMsgNotifyRequest) returns (google.protobuf.Empty);
}